fixed layout problems with form submission animation

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -1050,9 +1050,6 @@ input.error {
 }
 
 .loading-content {
-	position: absolute;
-	z-index: 99;
-	bottom: 0;
 	width: 100%;
 	text-align: center;
 	display: none;
